--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "main": "main.ts",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/main.js",
+    "start": "node dist/src/main.js",
     "build": "tsc -p .",
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/main.ts"
   },
@@ -18,6 +18,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.3",
