--- a/back/package.json
+++ b/back/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/main.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
